# VikingBot-Http-Server

./: .gitignore  README.md  generate_key.py  pyproject.toml  requirements.txt  test_api.py
vikingbot_api/: main.py
vikingbot_api/api/v1/: bot.py  ov.py
vikingbot_api/core/: auth.py  config.py  limiter.py  openviking_client.py
vikingbot_api/utils/: response.py
